fix(Search): align styles with board catalogs

--- a/src/routes/Search/styles.less
+++ b/src/routes/Search/styles.less
@@ -22,7 +22,7 @@
         overflow-y: auto;
 
         .search-row {
-            margin: 4rem 2rem;
+            margin: 2rem 1rem;
         }
 
         .search-hints-wrapper {
@@ -271,10 +271,6 @@
 @media only screen and (max-width: @minimum) {
     .search-container {
         .search-content {
-            .search-row {
-                margin: 2rem 1rem;
-            }
-
             .search-row-poster, .search-row-square {
                 .meta-item, .meta-item-placeholder {
                     &:nth-child(n+4) {
